--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arp Dance Academy - Contact</title>
+<link rel="icon" type="image/png" href="/fav.jpg">
+
     <link rel="stylesheet" href="../static/style2.css">
     <style>
         /* Add any additional CSS styles here */
