--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Arp Dance Academy</title>
+<link rel="icon" type="image/png" href="/fav.jpg">
+
 <link rel="stylesheet" href="../static/style3.css">
 </head>
 <body>
