--- a/declaration.html
+++ b/declaration.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Disclaimer - Arp Dance Academy</title>
+<link rel="icon" type="image/png" href="/fav.jpg">
+
     <link rel="stylesheet" href="../static/style.css" />
     <!-- Add your stylesheet here -->
     <style>
